src/objects/FSTR__Orchestrate_Debug_Log__c.object
<CustomObject>
    <fields>
        <fullName>FSTR__Definition_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Definition Id</label>
        <referenceTo>FSTR__PCE_Definition__c</referenceTo>
        <relationshipName>Orchestrate_Debug_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSTR__Details__c</fullName>
        <label>Details</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>FSTR__Drill_Down_Queries__c</fullName>
        <description>This field will contain queries you can perform in the Developer Console to see which drill down records are causing your Step Creation Criteria to fail.</description>
        <inlineHelpText>This field will contain queries you can perform in the Developer Console to see which drill down records are causing your Step Creation Criteria to fail.</inlineHelpText>
        <label>Drill Down Queries</label>
        <length>131070</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>FSTR__Process_Object_Id__c</fullName>
        <label>Process Object Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Process_Object_Name__c</fullName>
        <label>Process Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Process_Object_Type__c</fullName>
        <label>Process Object Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Step_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Step Id</label>
        <referenceTo>FSTR__PCE_Step__c</referenceTo>
        <relationshipName>Orchestrate_Debug_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Orchestrate Debug Log</label>
    <nameField>
        <label>Orchestrate Debug Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Orchestrate Debug Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>